# pyDocker

./: Dockerfile  Dockerfile.nginx  README.md  a  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
nginx/html/: error404.html
scripts/: build.sh  dev.sh  push.sh
src/: app.py
