[tool.poetry]
name = "py-docker"
version = "0.1.0"
description = ""
authors = ["Marcio Altoé <marcio.altoe@gmail.com>"]
# readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
flask = "^3.0.3"
gunicorn = "^22.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
